--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-rabbitmq-helper",
-  "version": "1.0.3",
+  "version": "1.0.7",
   "description": "",
   "eggPlugin": {
     "name": "rabbitmqHelper"
@@ -40,6 +40,7 @@
     "app.js",
     "agent.js",
     "config",
+    "lib",
     "app"
   ],
   "ci": {
